@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? March 2004, PHP 5 Release Candidate 1
 - Changed Iterator::has_more() to Iterator::valid(). (Marcus)
 - Upgraded bundled oniguruma library to version 2.2.2. (Rui, Moriyoshi)
+- Added mb_list_encoding() to return an array with all mbstring supported
+  encodings. (Derick)
 - Added support for more ISO8601 style datetime formats. (Moriyoshi)
   . Timezone specifier (ex. "20040301T02:00:00+19:00")
   . Week specifier (ex. "1997W021")
